# smart-summary-app-backend

./: .env  .env.template  .gitignore  Dockerfile  README.md  copilot-context.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: summarize_agent.py
app/api/: __init__.py  summarize.py
app/core/: config.py  http_middlewares.py  logger.py
tests/: test_health.py  test_summarize.py
